# T

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  arm64.sh  autogen.sh  build.ninja  cmake_install.cmake  config.h  config.h.in  config.status  configure  configure.ac
.github/workflows/: cmake.yml  deb.yml  test.yml
debian/: changelog
src/: ruri.c
src/include/: ruri.h  version.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile.test  build.ninja  check_flag.c  cmake_install.cmake  init-root-test.sh  main.cpp  rootfstool  test-root.sh
test/root/: 7-ps.sh
